--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,17 +3,45 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="login-container">
+        <div class="wrapper">
 
-    {{ form_errors(registrationForm) }}
+            <div class="wprapp-el">
+                    {{ form_start(registrationForm, {'attr': {'class': 'form-horizontal', 'novalidate': 'novalidate'}})}}
+                    <span class="heading">РЕЄСТРАЦІЯ</span>
+                    <div class="form-error">
+                        {{ form_errors(registrationForm.plainPassword) }}
+                        {{ form_errors(registrationForm.agreeTerms) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(registrationForm.firstName, {label: false, 'attr': {'class': 'form-control', 'placeholder': "Ім'я"}}) }}
+                        <i class="fa fa-user"></i>
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(registrationForm.lastName, {label: false, 'attr': {'class': 'form-control', 'placeholder': 'Прізвище'}}) }}
+                        <i class="fa fa-user"></i>
+                    </div>
+                    <div class="form-group">
+                        {{ form_row(registrationForm.email, {label: false, 'attr': {'class': 'form-control', 'placeholder': 'E-mail'}}) }}
+                        <i class="fa fa-user"></i>
+                    </div>
+                    <div class="form-group">
+                        {{ form_widget(registrationForm.plainPassword, {label: false, 'attr': {'class': 'form-control', 'placeholder': 'Password'}}) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                        <i class="fa fa-lock"></i>
+                        <a href="#" class="fa fa-question-circle"></a>
+                    </div>
+                    <div class="form-group">
+                        <div class="main-checkbox">
+                            {{ form_widget(registrationForm.agreeTerms, {label: false, 'attr': {'value': '0'}}) }}
+                            <label for="registration_form_agreeTerms"></label>
+                        </div>
+                        <span class="text">Agree terms</span>
+                        <button type="submit" class="btn btn-default">Зареєструватися</button>
+                    </div>
+                {{ form_end(registrationForm) }}
+            </div>
+            <a href="{{ path('app_login') }}" class="btn btn-success register-button mt-4">ВХІД</a>
+        </div><!-- /. -->
+    </div><!-- /.container -->
 {% endblock %}
