--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,7 +8,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <h1 class="display-4 fw-normal">Winker headline</h1>
             <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your business with this example based on Winker.</p>
-            <a class="btn btn-outline-secondary" href="{{ path('app_login') }}">To login</a>
+            <a class="btn btn-outline-secondary" href="{{ path('app_login') }}">Login</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
